# template_python_project

./: README.md  cookiecutter.json
src/{{ cookiecutter.project_name }}/: log_factory.py  main.py
tests/{{ cookiecutter.project_name }}/: test_main.py
{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
{{cookiecutter.project_name}}/src/{{ cookiecutter.project_name }}/: cli.py  settings.py
