[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_name }}"]

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "environs>=15.0.1",
    "structlog>=26.1.0",
]

[project.scripts]
_{{ cookiecutter.project_name }} = "{{ cookiecutter.project_name }}.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
markers = [
    "unit",
]
